tdf#159595: Data validation without error check allows to enter wrong data

Change-Id: If5660f462a07ca571e05a44abcb0e378b6de613e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163064
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>